# GitHubActionsTest

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GitHubActionsTest.cpp  compose.yml  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: GitHubActionsTest.cpp  GitHubActionsTest.h
